--- a/留言板/index.html
+++ b/留言板/index.html
@@ -109,8 +109,8 @@
       }
 
       let li = document.createElement('li');
-      li.innerHTML = '<li><div class="info"><h4>' + userVal + '</h4><small>' + formatDate() + '</small></div><div>' + content + '</div></li>'
-        
+      li.innerHTML = '<li><div class="info"><h4>' + userVal + '</h4><small>' + formatDate() + '</small></div><div style="width: 200px;">' + content + '</div></li>'
+
       document.querySelector('#msgBoard').appendChild(li);
 
     }
